[package]
name = "rust-hnsw"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = [ "small_rng" ] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench"
harness = false
